ui.frontend/src/main/webpack/etisalat/styles/accordion-variants.scss
.strip-accordion {
	h3 {
		vertical-align: middle;
		padding: 0;
	}
	.cmp-accordion__item {
		background-color: $sand-white-50;
		border: 0;
		box-shadow: none;
		padding: 1rem 1.5rem;
	}
	.cmp-accordion__item:nth-child(2n) {
		background-color: $white;
		margin-top: 5px;
	}
	.cmp-accordion__title {
		@include font-family-lato();
		font-size: $font16;
		font-weight: 700;
		line-height: 1.5;
		color: $almost-black;
	}
	.cmp-rte-text {
		padding-left: 0px;
	}
	.cmp-text {
		color: $steel-grey;
		margin-top: 0.8rem;
		margin-bottom: 0.8rem;
		font-size: $font14;
		line-height: 20px;
		@include font-family-lato();
	}
	button:focus {
		background-color: transparent;
	}
	.cmp-accordion__title {
		&:after {
			content: " + ";
			display: table-cell;
			padding: 5px;
			position: relative;
			vertical-align: top;
			font-size: $font30;
			text-align: center;
			line-height: 12px;
			font-weight: 300;
			color: $almost-black;
			float: right;
		}
	}
	.cmp-accordion__button--expanded .cmp-accordion__title {
		&:after {
			content: " - ";
			color: $almost-black;
			display: table-cell;
			padding: 5px;
			position: relative;
			vertical-align: top;
			font-size: $font64;
			text-align: center;
			line-height: 12px;
			font-weight: 200;
			float: right;
		}
	}
	.cmp-accordion__button {
		display: grid;
	}
}

//Simple line accordion
.line-accordion{
	.cmp-accordion__item {
		display: block;
		border-bottom: 0;
	}
	.cmp-accordion__title {
		line-height: 1.5;
		font-size: $font16;
		display: inline-block;
		color: $black;
		@include font-family-lato();
		padding-right: 5.5rem;
		font-weight: 700;
		@include respond-to-min($desktop) {
			line-height: 1.4;
			font-size: $font20;
			padding:15px 1.5rem;
		}
	}
	.cmp-accordion__itemdesc {
		line-height: 1.5;
		font-size: $font16;
		color: $dark-gray;
		@include font-family-lato();
		padding-right: 6.5rem;
		font-weight: normal;
		@include respond-to-min($desktop) {
			font-size: $font20;
			padding: 5px 1.5rem;
		}
	}
	button:focus {
		background-color: transparent;
	}
	.cmp-accordion__icon {
		content: "";
		display: block;
		width: 11px;
		right: 3px;
		border: solid $almost-black;
		border-width: 0 2px 2px 0;
		padding: 5px;
		position: absolute;
		line-height: 1;
		transform: translateY(-80%) rotate(45deg);
		top: 50%;
		transition: all .3s ease-in-out;
		margin-right: 2px;
		@include respond-to-min($desktop){
			margin-right: 36px;
		}
	}
	.cmp-accordion__button{
		border-bottom: 1px solid $light-sand-brown;
	}
	.cmp-accordion__button--expanded{
		border-bottom: 1px solid $sand-white-50;
	}
	.cmp-accordion__button--expanded .cmp-accordion__icon {
		transform: translateY(-20%) rotate(-135deg);
		-webkit-transform: translateY(-20%) rotate(-135deg);
	}
	.cmp-accordion__panel--expanded {
		left: 50%;
		margin-left: -50vw;
		position: relative;
		width: 100vw;
		background-color: $sand-white-50;
	}
	.cmp-rte-text {
		padding-left: 0px
	}
	.cmp-text {
		display: block;
		padding-left: 1.375rem;
		padding-right: 1.375rem;
		padding-top: 1.5rem;
		font-size: $font16;
		line-height: 28px;
		padding-bottom: 1rem;
		color: $dark-gray;
		@include font-family-lato();
		margin-bottom: 0px;
		margin-left: auto;
		margin-right: auto;
		max-width: 1224px;
		@include respond-to-min($desktop) {
			padding: 1.5rem 6.5rem;
			font-size: $font20;
		}
		ol {
			li {
				padding-left: .75rem;
			}
		}
	}
}

//tab with accordion
.cmp-accordion--tab {
	@include font-family-Neotech-roboto();
	.cmp-title{
		padding: 1.5rem 1rem;
		@include respond-to-min($desktop){
			padding: 0;
			margin-top: 45px;
		}
	}
	.cmp-accordion__item {
		display: block;
		border-bottom: 1px solid $light-sand-brown;
	}
	.cmp-accordion__button{
		padding: 0;
	}
	.cmp-accordion__title {
		line-height: 1.5;
		font-size: $font12;
		display: inline-block;
		color: $almost-black;
		@include font-family-lato();
		padding:1.25rem 25px;
		@include respond-to-min($desktop) {
			line-height: 1.4;
			font-size: $font16;
			padding:1.5rem 25px;
		}
	}
	button:focus {
		background-color: transparent;
	}
	.cmp-accordion__icon {
		content: "";
		display: block;
		width: 11px;
		right: 3px;
		border: solid $almost-black;
		border-width: 0 1px 1px 0;
		padding: 5px;
		position: absolute;
		line-height: 1;
		transform: translateY(-80%) rotate(45deg);
		top: 50%;
		transition: all .3s ease-in-out;
		margin-right: 3px;
		@include respond-to-min($desktop){
			border-width: 0 2px 2px 0;
		}
	}
	.cmp-accordion__button--expanded .cmp-accordion__icon {
		transform: translateY(-20%) rotate(-135deg);
		-webkit-transform: translateY(-20%) rotate(-135deg);
	}
	.cmp-rte-text {
		padding-left: 0px;
	}
	.cmp-text {
		background-color: $sand-white-50;
		border-top-color: transparent;
		padding: 1rem;
		font-size: $font12;
		@include font-family-lato();
		line-height: 20px;
		color: $steel-grey;
		margin-bottom: 0px;
		@include respond-to-min($desktop) {
			padding: 1.3rem 1.5rem;
		}
	}
	@include respond-to-max($tablet) {
		.nav-view-wrapp.panel>a,
		.nav-view-wrapp.panel>a.collapsed {
			line-height: 1.5;
			letter-spacing: normal;
			padding: 1.5rem;
			display: flex;
			align-items: center;
			position: relative;
			flex-direction: row-reverse;
			justify-content: flex-end;
			border-bottom: 1px solid $light-sand-brown;
		}
		.nav-view-wrapp.panel>a.collapsed {
			color: $almost-black;
		}
		.nav-view-wrapp.panel>a:before {
			content: "";
			border-left: 4px solid $main-green;
			display: block;
			position: absolute;
			height: 100%;
			left: -12px;
			top: 0;
			font-size: $font16;
			@include font-family-Neotech-roboto();
			color: $main-green;
		}
		.nav-view-wrapp.panel>a.collapsed:before {
			display: none;
		}
		.nav-view-wrapp.panel>a:after{
			border: solid $main-green;
			border-width: 0 1px 1px 0;
			padding: 5px;
			content: "";
			position: absolute;
			line-height: 1;
			transform: translateY(-30%) rotate(-135deg);
			transition: all .3s ease-in-out;
			right: 3px;
			z-index: 1;
			top: 50%;
		}
		.nav-view-wrapp.panel>a.collapsed:after {
			transform: translateY(-70%) rotate(45deg);
			border: solid $almost-black;
			border-width: 0 1px 1px 0;
		}
		.nav-view-wrapp.panel>a {
			font-size: $font16;
		}
		.panel {
			background-color: $white;
			margin: 28px;
		}
		.nav-view-wrapp.panel>a:before {
			padding: 5px;
		}
		.nav-view-wrapp.panel .cmp-title__text {
			font-size: $font20;
		}
	}
	@include respond-to-min($desktop) {
		h3 {
			margin: 0px;
		}
		.cmp-tabs {
			display: flex;
			.cmp-tabs__tab {
				flex-direction: row-reverse;
				justify-content: flex-end;
				font-size: $font20;
				@include font-family-Neotech-roboto();
				box-sizing: border-box;
				cursor: pointer;
				color: $almost-black;
				line-height: 90px;
				border-bottom: 0;
				padding: 0 0 0 30px;
				&--active {
					border-left: 4px solid $main-green;
					color: $main-green;
					display: block;
					line-height: 90px;
					padding:0 0 0 26px;
				}
			}
		}
		.cmp-tabs__tablist {
			margin-left: 9%;
			display: block;
			flex-wrap: wrap;
			list-style: none;
			padding-left: 0;
			width: 30%;
		}
		.cmp-tabs__tabpanel--active {
			margin-right: 8%;
			width: 60%;
		}
	}
}

//accordion with child accordion as list 
.green-list {
	margin-left: auto;
	margin-right: auto;
	width: 860px;
	.cmp-list {
		margin-top: 65px;
	}
	article {
		display: flex;
		flex-direction: row;
		border-top: 1px solid $light-sand-brown;
	}
	.cmp-list__item-title {
		cursor: pointer;
		display: block;
		color: $main-green;
		@include font-family-lato();
		font-size: $font16;
		line-height: 22px;
		margin: 0;
		padding: 15px 0;
	}
	.cmp-list__item-icon {
		content: "";
		position: relative;
		transform: translateY(-50%) rotate(45deg);
		color: $almost-black;
		display: block;
		width: 12px;
		top: 27px;
		height: 12px;
		margin-left: 10px;
		border-top: 1.5px solid $main-green;
		border-right: 1.5px solid $main-green;
	}
	span.more,
	span.less {
		color: $almost-black;
		@include font-family-lato();
		font-size: $font14;
		letter-spacing: 2px;
		line-height: 18px;
		text-decoration: none;
		text-transform: uppercase;
		margin-top: 10px;
		width: 100%;
		text-align: right;
		float: right;
	}
}

